--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "experiments": {
+      "tsconfigPaths": true
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -22,6 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app accesses your camera in order to take photos of your favorite places. "
+        }
+      ]
+    ]
   }
 }
